--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,7 @@
 [tox]
-envlist = py27,py3
+envlist = py27,py36
 [testenv]
-commands=py.test -v tests/
+deps =
+  pytest
+  mock
+commands = py.test -v tests/
